force-app/main/default/objects/Gas_Service_Request__c/Gas_Service_Request__c.object-meta.xml
<CustomObject>
    <label>Gas Service Request</label>
    <nameField>
        <displayFormat>GSR-{00000}</displayFormat>
        <label>Gas Service Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gas Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>