force-app/main/default/objects/Gas_Service_Request__c/fields/Gas_Detail__c.field-meta.xml
<CustomField>
    <fullName>Gas_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gas Detail</label>
    <referenceTo>Gas_Detail__c</referenceTo>
    <relationshipLabel>Gas Service Requests</relationshipLabel>
    <relationshipName>Gas_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>