force-app/main/default/objects/Gas_Service_Request__c/fields/Installation_Required__c.field-meta.xml
<CustomField>
    <fullName>Installation_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Installation Required</label>
    <type>Checkbox</type>
</CustomField>